--- a/public/sendnotification.html
+++ b/public/sendnotification.html
@@ -5,171 +5,221 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Send Notification</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-    body {
-      background-color: #1d1d1d;
-    }
+  body {
+    background-color: #1d1d1d;
+  }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
+  .main-container {
+    display: flex;
+    height: 100vh;
+    flex-direction: row;
+  }
+
+  .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+    position: fixed;
+    top: -100%;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    transition: top 0.3s ease-in-out;
+    overflow-y: auto;
+  }
+
+  .sidebar.open {
+    top: 0;
+  }
+
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+  }
+
+  .menu {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .menu li {
+    margin-bottom: 15px;
+  }
+
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+  }
+
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .menu li a span {
+    font-size: 18px;
+    transition: transform 0.3s ease;
+  }
+
+  .menu li a:hover span {
+    transform: scale(1.2);
+  }
+
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto;
+    transition: background 0.3s ease;
+  }
+
+  .logout:hover {
+    background-color: #d07900;
+  }
+
+  .main {
+    flex-grow: 1;
+    background-color: white;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 270px;
+  }
+
+  .form {
+    background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+    padding: 35px 30px;
+    border-radius: 20px;
+    max-width: 500px;
+    width: 100%;
+    color: white;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .form:hover {
+    transform: scale(1.01);
+    box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
+  }
+
+  .form h3 {
+    margin-bottom: 20px;
+    color: white;
+    text-align: center;
+  }
+
+  .form input,
+  .form textarea {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    border: none;
+    font-size: 15px;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #000;
+    transition: box-shadow 0.3s ease;
+  }
+
+  .form input:focus,
+  .form textarea:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(54, 169, 225, 0.9);
+  }
+
+  .form button {
+    padding: 12px 24px;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    background-color: #28a745;
+    color: white;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    font-size: 16px;
+    transition: background 0.3s ease, transform 0.2s ease;
+  }
+
+  .form button:hover {
+    background-color: #218838;
+    transform: scale(1.05);
+  }
+
+  .mobile-toggle {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 9999;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  @media (max-width: 768px) {
     .main-container {
-      display: flex;
-      height: 100vh;
+      flex-direction: column;
     }
 
     .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 20px;
+      width: 100%;
+      max-height: 90vh;
     }
 
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-    }
-
-    .menu {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    .menu li {
-      list-style: none;
-      margin-bottom: 15px;
-    }
-
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto;
-      transition: background 0.3s ease;
-    }
-
-    .logout:hover {
-      background-color: #d07900;
+    .sidebar.open {
+      top: 0;
     }
 
     .main {
-      flex-grow: 1;
-      background-color: white;
-      padding: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin-left: 0;
+      padding: 20px;
     }
 
-.form {
-  background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-  padding: 35px 30px;
-  border-radius: 20px;
-  max-width: 500px;
-  width: 100%;
-  color: white;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.form:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-}
-
-    .form h3 {
-      margin-bottom: 20px;
-      color: white;
-      text-align: center;
+    .mobile-toggle {
+      display: block;
     }
-
-.form input,
-.form textarea {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 15px;
-  border-radius: 8px;
-  border: none;
-  font-size: 15px;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #000;
-  transition: box-shadow 0.3s ease;
-}
-
-.form input:focus,
-.form textarea:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(54, 169, 225, 0.9);
-}
-
-
-.form button {
-  padding: 12px 24px;
-  border: none;
-  border-radius: 8px;
-  font-weight: bold;
-  background-color: #28a745;
-  color: white;
-  cursor: pointer;
-  display: block;
-  margin: 0 auto;
-  font-size: 16px;
-  transition: background 0.3s ease, transform 0.2s ease;
-}
-
-.form button:hover {
-  background-color: #218838;
-  transform: scale(1.05);
-}
-
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="main-container">
@@ -198,7 +248,7 @@
       </div>
     </div>
   </div>
-
+<div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
   <script>
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
@@ -241,6 +291,19 @@
     alert("Something went wrong. Please try again.");
   });
 }
+
+    function toggleMobileMenu() {
+  const sidebar = document.querySelector('.sidebar');
+  sidebar.classList.toggle('open');
+}
+
+document.querySelectorAll(".menu li a").forEach(link => {
+  link.addEventListener("click", () => {
+    if (window.innerWidth <= 768) {
+      document.querySelector('.sidebar').classList.remove('open');
+    }
+  });
+});
 
         function logout() {
     localStorage.removeItem("userId");
