--- a/public/sendnotification.html
+++ b/public/sendnotification.html
@@ -6,7 +6,7 @@
   <title>Send Notification</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
 <style>
-  * {
+   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,11 +15,7 @@
 
   body {
     background-color: #1d1d1d;
-  }
-
-  a {
-    text-decoration: none;
-    color: inherit;
+    color: #000;
   }
 
   .main-container {
@@ -36,16 +32,12 @@
     justify-content: space-between;
     padding: 20px;
     position: fixed;
-    top: -100%;
+    top: 0;
     bottom: 0;
     left: 0;
-    z-index: 999;
-    transition: top 0.3s ease-in-out;
+    z-index: 100;
     overflow-y: auto;
-  }
-
-  .sidebar.open {
-    top: 0;
+    transition: top 0.3s ease-in-out;
   }
 
   .sidebar h2 {
@@ -72,6 +64,7 @@
     padding: 12px 20px;
     border-radius: 8px;
     transition: all 0.3s ease;
+    text-decoration: none;
   }
 
   .menu li a:hover,
@@ -107,7 +100,6 @@
   .logout:hover {
     background-color: #d07900;
   }
-
   .main {
     flex-grow: 1;
     background-color: white;
