--- a/public/updatefee.html
+++ b/public/updatefee.html
@@ -6,129 +6,211 @@
   <title>Staff - Update Fee</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
-    /* Your full existing styles here, no changes made except necessary additions */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    body {
-      background-color: #1d1d1d;
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  body {
+    background-color: #1d1d1d;
+    color: #000;
+  }
+
+  .main-container {
+    display: flex;
+    height: 100vh;
+    flex-direction: row;
+  }
+
+  .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    overflow-y: auto;
+    transition: top 0.3s ease-in-out;
+  }
+
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+  }
+
+  .menu {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .menu li {
+    margin-bottom: 15px;
+  }
+
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+    text-decoration: none;
+  }
+
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .menu li a span {
+    font-size: 18px;
+    transition: transform 0.3s ease;
+  }
+
+  .menu li a:hover span {
+    transform: scale(1.2);
+  }
+
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto;
+    transition: background 0.3s ease;
+  }
+
+  .logout:hover {
+    background-color: #d07900;
+  }
+
+  .main {
+    flex-grow: 1;
+    background-color: white;
+    padding: 40px;
+    overflow-y: auto;
+    margin-left: 270px;
+  }
+
+  .form-box {
+    background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+    padding: 40px 35px;
+    border-radius: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+    color: white;
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
+  }
+
+  .form-box h2 {
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
+  .input-group {
+    margin-bottom: 15px;
+  }
+
+  .input-group label {
+    color: white;
+    display: block;
+    margin-bottom: 6px;
+    font-weight: bold;
+  }
+
+  .input-group input,
+  .input-group select {
+    width: 100%;
+    padding: 12px;
+    border-radius: 8px;
+    border: none;
+    font-size: 15px;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #000;
+  }
+
+  .form-box button {
+    margin-top: 20px;
+    width: 100%;
+    padding: 14px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #1D73D2;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+  }
+
+  .form-box button:hover {
+    background-color: #155ea8;
+    transform: scale(1.05);
+  }
+
+  .mobile-toggle {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 9999;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  @media (max-width: 768px) {
     .container {
-      display: flex;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
       flex-direction: column;
-      justify-content: space-between;
+    }
+
+    .sidebar {
+      top: -100%;
+      width: 100%;
+      max-height: 90vh;
+    }
+
+    .sidebar.open {
+      top: 0;
+    }
+
+    .mobile-toggle {
+      display: block;
+    }
+
+    .main {
+      margin-left: 0;
       padding: 20px;
     }
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-    }
-    .menu {
-      list-style: none;
-      padding: 0;
-    }
-    .menu li {
-      margin-bottom: 15px;
-    }
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto;
-      transition: background 0.3s ease;
-    }
-    .logout:hover {
-      background-color: #d07900;
-    }
-    .main {
-      flex-grow: 1;
-      background-color: white;
-      padding: 40px;
-      overflow-y: auto;
-    }
+
     .form-box {
-      background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-      padding: 40px 35px;
-      border-radius: 20px;
-      max-width: 600px;
-      margin: 0 auto;
-      color: white;
-      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-    }
-    .form-box h2 {
-      text-align: center;
-      margin-bottom: 25px;
-    }
-    .input-group {
-      margin-bottom: 15px;
-    }
-    .input-group label {
-      color: white;
-      display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-    }
-    .input-group input,
-    .input-group select {
       width: 100%;
-      padding: 12px;
-      border-radius: 8px;
-      border: none;
-      font-size: 15px;
-      background-color: rgba(255, 255, 255, 0.9);
-      color: #000;
+      padding: 25px 15px;
     }
-    .form-box button {
-      margin-top: 20px;
-      width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      font-weight: bold;
-      background-color: #1D73D2;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-    .form-box button:hover {
-      background-color: #155ea8;
-      transform: scale(1.05);
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="container">
