--- a/public/imposefines.html
+++ b/public/imposefines.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Impose Fines</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
@@ -13,13 +14,14 @@
     }
 
     body {
-      background-color: #2e2e2e;
+      background-color: #1d1d1d;
+      color: #000;
     }
 
-    .container {
+    .main-container {
       display: flex;
       height: 100vh;
-      overflow: hidden;
+      flex-direction: row;
     }
 
     .sidebar {
@@ -29,6 +31,13 @@
       flex-direction: column;
       justify-content: space-between;
       padding: 20px;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 100;
+      overflow-y: auto;
+      transition: top 0.3s ease-in-out;
     }
 
     .sidebar h2 {
@@ -38,7 +47,7 @@
     }
 
     .menu {
-      list-style: none;
+      list-style-type: none;
       padding: 0;
     }
 
@@ -65,6 +74,15 @@
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
     }
 
+    .menu li a span {
+      font-size: 18px;
+      transition: transform 0.3s ease;
+    }
+
+    .menu li a:hover span {
+      transform: scale(1.2);
+    }
+
     .logout {
       background-color: #f09000;
       color: white;
@@ -82,11 +100,15 @@
       background-color: #d07900;
     }
 
-    .main {
+    .content {
       flex-grow: 1;
       background-color: white;
-      padding: 40px;
-      overflow-y: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-left: 270px;
+      padding: 20px;
     }
 
     .fine-box {
@@ -96,6 +118,8 @@
       color: white;
       max-width: 500px;
       margin: 0 auto;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
       box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
@@ -111,8 +135,7 @@
     }
 
     .fine-box input,
-    .fine-box textarea,
-    .fine-box select {
+    .fine-box textarea {
       width: 100%;
       padding: 12px;
       margin-bottom: 15px;
@@ -125,8 +148,7 @@
     }
 
     .fine-box input:focus,
-    .fine-box textarea:focus,
-    .fine-box select:focus {
+    .fine-box textarea:focus {
       outline: none;
       box-shadow: 0 0 5px rgba(30, 161, 242, 0.8);
     }
@@ -149,6 +171,49 @@
       transform: scale(1.05);
     }
 
+    .mobile-toggle {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #1f75cb;
+      color: white;
+      font-size: 24px;
+      padding: 12px 18px;
+      border-radius: 50px;
+      z-index: 9999;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    @media (max-width: 768px) {
+      .main-container {
+        flex-direction: column;
+      }
+
+      .sidebar {
+        width: 100%;
+        top: -100%;
+        position: fixed;
+        max-height: 90vh;
+        z-index: 999;
+      }
+
+      .sidebar.open {
+        top: 0;
+      }
+
+      .content {
+        margin-left: 0;
+        padding: 20px;
+      }
+
+      .mobile-toggle {
+        display: block;
+      }
+    }
+
     a {
       text-decoration: none;
       color: inherit;
@@ -156,7 +221,8 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="main-container">
+    <!-- Sidebar -->
     <div class="sidebar">
       <h2><strong>ID:</strong> <span id="userId">Loading...</span></h2>
       <ul class="menu">
@@ -164,30 +230,26 @@
         <li><a href="sendnotification.html"><span>📨</span> Send Notification</a></li>
         <li><a href="updatefee.html"><span>💵</span> Update Fee</a></li>
         <li class="active"><a href="#"><span>💰</span> Impose Fines</a></li>
-        <li><a href="verifynoc.html"><span>➕</span> Add Student</a></li>
+        <li><a href="verifynoc.html"><span>🔍</span> Verify NOC</a></li>
         <li><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy Policy</a></li>
       </ul>
       <button class="logout" onclick="logout()">Logout</button>
     </div>
 
-    <div class="main">
+    <!-- Main Content -->
+    <div class="content">
       <div class="fine-box">
         <h2>Impose Fine</h2>
         <input type="text" id="studentId" placeholder="Student User ID" required />
-        <textarea id="reason" rows="3" placeholder="Reason for fine" required></textarea>
+        <textarea id="reason" rows="3" placeholder="Reason"></textarea>
         <input type="number" id="amount" placeholder="Amount (₹)" required />
-        <select id="academicYear" required>
-          <option value="">Select Academic Year</option>
-          <option value="1">1st Year</option>
-          <option value="2">2nd Year</option>
-          <option value="3">3rd Year</option>
-          <option value="4">4th Year</option>
-        </select>
         <button onclick="imposeFine()">Impose Fine</button>
       </div>
     </div>
   </div>
+
+  <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
 
   <script>
     const userId = localStorage.getItem("userId");
@@ -197,31 +259,39 @@
       const studentId = document.getElementById("studentId").value.trim();
       const reason = document.getElementById("reason").value.trim();
       const amount = parseInt(document.getElementById("amount").value.trim());
-      const academicYear = document.getElementById("academicYear").value.trim();
       const staffId = localStorage.getItem("userId");
 
-      if (!studentId || isNaN(amount) || !reason || !academicYear) {
-        alert("Please fill in all fields correctly.");
+      if (!studentId || isNaN(amount)) {
+        alert("Please enter valid Student ID and Amount.");
         return;
       }
 
-      fetch("https://crr-noc.onrender.com/impose-fine", {
+      if (!reason) {
+        alert("Please enter the reason for the fine.");
+        return;
+      }
+
+      fetch("http://localhost:3000/impose-fine", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ userId: studentId, reason, amount, staffId, academic_year: academicYear })
+        body: JSON.stringify({ userId: studentId, reason, amount, staffId })
       })
-      .then(res => res.json())
-      .then(data => {
-        alert(data.message || "Fine imposed successfully!");
-        document.getElementById("studentId").value = "";
-        document.getElementById("reason").value = "";
-        document.getElementById("amount").value = "";
-        document.getElementById("academicYear").value = "";
-      })
-      .catch(err => {
-        console.error("Error:", err);
-        alert("Failed to impose fine.");
-      });
+        .then(res => res.json())
+        .then(data => {
+          alert(data.message || "Fine imposed successfully!");
+          document.getElementById("studentId").value = "";
+          document.getElementById("reason").value = "";
+          document.getElementById("amount").value = "";
+        })
+        .catch(err => {
+          console.error("Error:", err);
+          alert("Failed to impose fine.");
+        });
+    }
+
+    function toggleMobileMenu() {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.classList.toggle('open');
     }
 
     function logout() {
