--- a/public/updatefee.html
+++ b/public/updatefee.html
@@ -258,7 +258,7 @@
       </div>
     </div>
   </div>
-
+  <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
   <script>
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
@@ -298,6 +298,10 @@
         console.error("Fetch error:", err);
         alert("❌ Server error while updating fee");
       });
+    }
+     function toggleMobileMenu() {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.classList.toggle('open');
     }
 
     function logout() {
