--- a/public/staffsettings.html
+++ b/public/staffsettings.html
@@ -172,6 +172,56 @@
       margin-right: 10px;
       font-size: 18px;
     }
+    .mobile-toggle {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #1f75cb;
+  color: white;
+  font-size: 24px;
+  padding: 12px 18px;
+  border-radius: 50px;
+  z-index: 9999;
+  cursor: pointer;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    position: fixed;
+    width: 100%;
+    top: -100%;
+    left: 0;
+    max-height: 90vh;
+    transition: top 0.3s ease-in-out;
+    z-index: 1000;
+  }
+
+  .sidebar.open {
+    top: 0;
+  }
+
+  .main {
+    margin-left: 0;
+    padding: 20px;
+  }
+
+  .form {
+    width: 100%;
+    padding: 25px;
+  }
+
+  .mobile-toggle {
+    display: block;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -204,10 +254,23 @@
       </div>
     </div>
   </div>
-
+<div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
   <script>
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
+
+    function toggleMobileMenu() {
+  document.querySelector('.sidebar').classList.toggle('open');
+}
+
+document.querySelectorAll(".menu li a").forEach(link => {
+  link.addEventListener("click", () => {
+    if (window.innerWidth <= 768) {
+      document.querySelector('.sidebar').classList.remove('open');
+    }
+  });
+});
+
 
     function logout() {
     localStorage.removeItem("userId");
