--- a/public/staffhelp.html
+++ b/public/staffhelp.html
@@ -204,6 +204,51 @@ button[type="submit"]:hover {
     opacity: 1;
   }
 }
+    .mobile-toggle {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #1f75cb;
+  color: white;
+  font-size: 24px;
+  padding: 12px 18px;
+  border-radius: 50px;
+  z-index: 9999;
+  cursor: pointer;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    max-height: 90vh;
+    transition: top 0.3s ease-in-out;
+    z-index: 1000;
+  }
+
+  .sidebar.open {
+    top: 0;
+  }
+
+  .content {
+    margin-left: 0;
+    padding: 20px;
+  }
+
+  .mobile-toggle {
+    display: block;
+  }
+}
+
 
   </style>
 </head>
@@ -248,7 +293,7 @@ button[type="submit"]:hover {
       </div>
     </div>
   </div>
-
+<div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
   <script>
     document.getElementById("userId").textContent = localStorage.getItem("userId") || "Unknown";
 
@@ -275,6 +320,17 @@ button[type="submit"]:hover {
         msgEl.innerText = "❌ " + (error || "Something went wrong");
       }
     });
+    function toggleMobileMenu() {
+  document.querySelector('.sidebar').classList.toggle('open');
+}
+
+document.querySelectorAll(".menu li a").forEach(link => {
+  link.addEventListener("click", () => {
+    if (window.innerWidth <= 768) {
+      document.querySelector('.sidebar').classList.remove('open');
+    }
+  });
+});
 
     function logout() {
     localStorage.removeItem("userId");
