--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Edit Profile</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
     * {
       margin: 0;
@@ -299,24 +300,7 @@
   </div>
   <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
 <script>
-      function toggleMobileMenu() {
-      const sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('open');
-    }
-
-    document.querySelectorAll(".menu li a").forEach(link => {
-      link.addEventListener("click", () => {
-        if (window.innerWidth <= 768) {
-          document.querySelector('.sidebar').classList.remove('open');
-        }
-      });
-    });
-  
-  const baseUrl = window.location.hostname.includes("localhost")
-    ? "http://localhost:3000"
-    : "https://crr-noc.onrender.com";
-
-  window.onpageshow = function (event) {
+  window.onpageshow = function(event) {
     if (event.persisted || (window.performance && window.performance.navigation.type === 2)) {
       window.location.reload();
     }
@@ -324,8 +308,14 @@
 
   const userId = localStorage.getItem("userId");
   if (!userId) {
-    alert("Please login first.");
-    window.location.href = "index.html";
+    Swal.fire({
+      icon: 'warning',
+      title: 'Not Logged In',
+      text: 'Please login first.',
+      confirmButtonColor: '#3085d6'
+    }).then(() => {
+      window.location.href = "index.html";
+    });
   } else {
     document.getElementById("userId").textContent = userId;
   }
@@ -352,7 +342,7 @@
   }
 
   function loadUserData() {
-    fetch(`${baseUrl}/student/${userId}`)
+    fetch(`http://localhost:3000/student/${userId}`)
       .then(res => res.json())
       .then(data => {
         form.name.value = data.name || "";
@@ -360,7 +350,6 @@
         form.year.value = data.year || "";
         form.course.value = data.course || "";
         form.semester.value = data.semester || "";
-        form.unique_id.value = data.unique_id || "";
         form.aadhar.value = data.aadhar_no || "";
         form.mobile.value = data.mobile_no || "";
         form.email.value = data.email || "";
@@ -371,7 +360,11 @@
       })
       .catch(err => {
         console.error("Error fetching user data:", err);
-        alert("Failed to load profile data");
+        Swal.fire({
+          icon: 'error',
+          title: 'Error',
+          text: 'Failed to load profile data'
+        });
       });
   }
 
@@ -385,32 +378,39 @@
 
   form.addEventListener("submit", (e) => {
     e.preventDefault();
-const updatedData = {
-  userId,
-  name: form.name.value,
-  dob: form.dob.value,
-  year: form.year.value,
-  course: form.course.value,
-  semester: form.semester.value,
-  unique_id: form.unique_id.value,
-  aadhar: form.aadhar.value,
-  mobile: form.mobile.value,
-  email: form.email.value
-};
+    const updatedData = {
+      userId,
+      name: form.name.value,
+      dob: form.dob.value,
+      year: form.year.value,
+      course: form.course.value,
+      semester: form.semester.value,
+      aadhar: form.aadhar.value,
+      mobile: form.mobile.value,
+      email: form.email.value
+    };
 
-    fetch(`${baseUrl}/editprofile`, {
+    fetch("http://localhost:3000/editprofile", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(updatedData),
+      body: JSON.stringify(updatedData)
     })
       .then(res => res.json())
       .then(data => {
-        alert(data.message || "Profile updated successfully!");
+        Swal.fire({
+          icon: 'success',
+          title: 'Success',
+          text: data.message || "Profile updated successfully!"
+        });
         loadUserData();
       })
       .catch(err => {
         console.error("Error updating profile:", err);
-        alert("Failed to update profile");
+        Swal.fire({
+          icon: 'error',
+          title: 'Error',
+          text: 'Failed to update profile'
+        });
       });
   });
 
@@ -426,6 +426,7 @@ const updatedData = {
     window.location.replace("index.html");
   }
 </script>
+
 
 </body>
 </html>
