--- a/public/imposefines.html
+++ b/public/imposefines.html
@@ -230,7 +230,7 @@
         <li><a href="sendnotification.html"><span>📨</span> Send Notification</a></li>
         <li><a href="updatefee.html"><span>💵</span> Update Fee</a></li>
         <li class="active"><a href="#"><span>💰</span> Impose Fines</a></li>
-        <li><a href="verifynoc.html"><span>➕</span> Add Student</a></li>
+        <li><a href="addstudent.html"><span>➕</span> Add Student</a></li>
         <li><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy Policy</a></li>
       </ul>
