--- a/public/staffsettings.html
+++ b/public/staffsettings.html
@@ -234,7 +234,7 @@
         <li><a href="sendnotification.html"><span>📨</span> Send Notification</a></li>
         <li><a href="updatefee.html"><span>💵</span> Update Fee</a></li>
         <li><a href="imposefines.html"><span>💰</span> Impose Fines</a></li>
-        <li><a href="verifynoc.html"><span>➕</span> Add Student</a></li>
+        <li><a href="addstudent.html"><span>➕</span> Add Student</a></li>
         <li class="active"><a href="#"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy Policy</a></li>
       </ul>
