--- a/public/staffhelp.html
+++ b/public/staffhelp.html
@@ -262,7 +262,7 @@ button[type="submit"]:hover {
         <li><a href="sendnotification.html"><span>📨</span> Send Notification</a></li>
         <li><a href="updatefee.html"><span>💵</span> Update Fee</a></li>
         <li><a href="imposefines.html"><span>💰</span> Impose Fines</a></li>
-        <li><a href="verifynoc.html"><span>🔍</span> Verify NOC</a></li>
+        <li><a href="addstudent.html"><span>🔍</span> Verify NOC</a></li>
         <li class="active"><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy Policy</a></li>
       </ul>
