--- a/public/adminpanel.html
+++ b/public/adminpanel.html
@@ -217,7 +217,52 @@
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.05);
   background-color: #fff;
 }
+.mobile-toggle {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 9999;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
 
+  @media (max-width: 768px) {
+    .mobile-toggle {
+      display: block;
+    }
+
+    .sidebar {
+      position: fixed;
+      top: -100%;
+      left: 0;
+      width: 100%;
+      max-height: 320px;
+      overflow-y: auto;
+      z-index: 999;
+      transition: top 0.3s ease-in-out;
+    }
+
+    .sidebar.open {
+      top: 0;
+    }
+
+    body {
+      flex-direction: column;
+      overflow-x: hidden;
+    }
+
+    .main {
+      margin-left: 0 !important;
+      width: 100% !important;
+    }
+  }
   </style>
 </head>
 <body>
@@ -351,12 +396,9 @@
     <tbody></tbody>
   </table>
 </div>
-
 </div>
-
-
   </div>
-
+<div class="mobile-toggle" onclick="toggleSidebar()">☰</div>
   <script>
     document.getElementById("sbiFile").addEventListener("change", function () {
   const file = this.files[0];
@@ -492,7 +534,17 @@ function applyNOCFilter() {
     });
   });
 }
+ function toggleSidebar() {
+    document.querySelector('.sidebar').classList.toggle('open');
+  }
 
+  document.querySelectorAll(".sidebar ul li").forEach(link => {
+    link.addEventListener("click", () => {
+      if (window.innerWidth <= 768) {
+        document.querySelector('.sidebar').classList.remove('open');
+      }
+    });
+  });
     function logout() {
     localStorage.removeItem("userId");
     if ("caches" in window) {
